fix blurry box shadow

--- a/css/index.css
+++ b/css/index.css
@@ -267,6 +267,8 @@ a[href].direct-link:focus:visited,
     margin-right: 1rem;
     transition: transform 0.15s ease-in-out;
     transform: skew(-2deg, 1deg);
+    backface-visibility: hidden;
+
 }
 
 .site-title:hover:not(:active),
@@ -340,7 +342,7 @@ a[href].direct-link:focus:visited,
 .page-link:hover {
   position: relative;
   background: var(--bg-dark);
-  transform: skew(0deg, 1deg) scale(1.15) translate(-4px, -1px);
+  transform: skew(0deg, 1deg) scale(1.15) translate(-4px, -2px);
   box-shadow: 0 0 2px -1px var(--bg-dark);
 }
 
